# sharedsecretctl

./: .dockerignore  .gitignore  .justfile  Cargo.toml  Dockerfile  README.md  Tiltfile
src/: controller.rs  crdgen.rs  lib.rs  main.rs
src/controller/: crd.rs  request.rs  shared.rs
test-deploy/: secret-remote.yml  shared-secret-request.yml  shared-secret.yml
